fixing sec project btns not working on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -810,6 +810,7 @@ header.mobile-active .mob-header {
     border-radius: 8px;
     overflow: hidden;
     filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.2));
+    touch-action: auto !important;
 
     @media (max-width: 700px) {
       width: 100%;
@@ -843,6 +844,7 @@ header.mobile-active .mob-header {
       background: var(--bg-white20);
       cursor: pointer;
       transition: all 0.2s var(--easeOut);
+      touch-action: auto !important;
 
       .line {
         position: absolute;
@@ -888,6 +890,7 @@ header.mobile-active .mob-header {
     color: var(--white80);
 
     transition: all 0.6s var(--easeOut);
+    touch-action: auto !important;
 
     &:hover {
       background-color: #444;
